# fribidi

./: .gitignore  CMakeLists.txt  README.md  XCompile-Android.txt
SMC/: config.h  fribidi-config.h  fribidi.def  fribidi.sln  fribidi.vcxproj  fribidi.vcxproj.filters  gen-arabic-shaping-tab.vcxproj  gen-bidi-type-tab.vcxproj  gen-joining-type-tab.vcxproj  gen-mirroring-tab.vcxproj  gen-unicode-version.vcxproj  libfribidi.sln  libfribidi.vcxproj  libfribidi.vcxproj.filters  version.h
SMC/lib/: bidi-type.tab.i  fribidi-unicode-version.h  mirroring.tab.i
SMP/: .gitignore  config.h  gen-arabic-shaping-tab.vcxproj  gen-bidi-type-tab.vcxproj  gen-joining-type-tab.vcxproj  gen-mirroring-tab.vcxproj  gen-unicode-version.vcxproj  libfribidi.sln  libfribidi.vcxproj  libfribidi.vcxproj.filters
SMP/lib/: arabic-shaping.tab.i  joining-type.tab.i
charset/: CMakeLists.txt
gen.tab/: CMakeLists.txt
lib/: CMakeLists.txt
