cmake_minimum_required(VERSION 3.1)

PROJECT(fribidi)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 9)
SET(VERSION_PATCH 7)
set(PROJECT_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
set(SO_VERSION ${VERSION_MAJOR})

ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(charset)

ADD_DEPENDENCIES(fribidi_shared fribidi-charset)
ADD_DEPENDENCIES(fribidi_static fribidi-charset)